# PQC_Communication

./: .gitmodules  CMakeLists.txt  DSA-Test.c  PQC_Communication.code-workspace  Readme.md  queue.c  transport.c  transport.h
Hybrid_SIDH_ECDH_Bench_kyber/: CMakeLists.txt  CMakePresets.json  Readme.md  analyze_bench.py
Hybrid_SIDH_ECDH_Bench_kyber/include/: bench_proto.h  masking.h  sidh_bridge.h  sidh_bridge_hooks.h  transport.h  transport_mqtt.h
Hybrid_SIDH_ECDH_Bench_kyber/src/: demo_main.c
Hybrid_SIDH_ECDH_Bench_kyber/src/apps/: alice_kyber_mqtt.c  alice_mqtt.c  bench_hybrid.c  bench_tx_alice.c  bench_tx_alice_normal.c  bench_tx_bob.c  bench_tx_bob_normal.c  bob_kyber_mqtt.c  bob_mqtt.c
Hybrid_SIDH_ECDH_Bench_kyber/src/common/: shake_mask.c  sidh_bridge.c  sidh_bridge_hooks.c
Hybrid_SIDH_ECDH_Bench_kyber/src/transports/mqtt/: transport_mqtt.c
KEM_Argon/: BENCHMARK_GUIDE.md  README.md  particle.json
KEM_Argon/.github/: copilot-instructions.md
KEM_Argon/components/mlkem/: CMakeLists.txt
KEM_Argon/components/mlkem/include/: mlkem.h
KEM_Argon/lib/mlkem/src/: mlkem.cpp  mlkem_config.h  mlkem_impl.c  mlkem_impl.cpp  mlkem_wrapper.cpp
KEM_Argon/results/: benchmark_ML_KEM_1024_10iter_20260405_121932.json  benchmark_ML_KEM_512_10iter_20260405_111051.json  mqtt_serial_log_20260405_130845.txt  mqtt_serial_log_20260405_132643.txt  serial_log_20260405_111051.txt  serial_log_20260405_121932.txt
KEM_Argon/scripts/: capture_benchmark_results.py
KEM_Argon/src/: MQTT_communication.cpp  main.cpp  transport.h
PQ_Signatures_Mamadou/Signature-Argon/: README
PQ_Signatures_Mamadou/Signature-Argon-RSA/src/: main.cpp
PQ_Signatures_Mamadou/Signature-Argon/results/: argon_keypair.jsonl
PQ_Signatures_Mamadou/Signature-Argon/results/energy/: argon_energy.jsonl
PQ_Signatures_Mamadou/Signature-Argon/src/: bench_local.h
PQ_Signatures_Mamadou/Signature-Argon/tools/energy/: run_batch.sh  run_ppk2_bench_argon.py
PQ_Signatures_Mamadou/Signature-RaspberryPi/: DSA-Test.c  DSA-locale-test.c  Readme.md  queue.h  transport.c
PQ_Signatures_Mamadou/Signature-RaspberryPi/results/: rpi-local_whole.jsonl
PQ_Signatures_Mamadou/results/local/sign/: Falcon-512.jsonl  MAYO-1.jsonl  SPHINCS_-SHAKE-128f-simple.jsonl
PQ_Signatures_Mamadou/results/local/verify/: ML-DSA-44.jsonl  SPHINCS_-SHAKE-128f-simple.jsonl
PQ_Signatures_Mamadou/results/local/whole/: SPHINCS_-SHA2-128f-simple.jsonl  SPHINCS_-SHA2-128s-simple.jsonl
PQ_Signatures_Mamadou/signature-esp32/components/DSA/mayo/: CMakeLists.txt
PQ_Signatures_Mamadou/signature-esp32/components/DSA/mayo/src/: mayo.c
PQ_Signatures_Mamadou/signature-esp32/components/DSA/mayo/src/mayo_1/: api.c
PQ_Signatures_Mamadou/signature-esp32/main/: CMakeLists.txt  app_interop.c  app_main.c  bench_common.c  bench_common.h  bench_local.c  mayo_smoke.c
PQ_Signatures_Mamadou/signature-esp32/results/: analyze_results_esp32.ipynb  esp32_energy.jsonl
PQ_Signatures_Mamadou/signature-esp32/results/energy/: esp32_energy_esp_raw.jsonl
PQ_Signatures_Mamadou/signature-esp32/results/local/: ppk2_energy_esp32.jsonl
Signature-Argon-RSA/: project.properties
Signature-Argon-RSA/inc/: dsa.h
Signature-Argon-RSA/lib/rsa/: library.properties
Signature-Argon-RSA/lib/rsa/src/: platform_zeroize.c  rsa_impl.cpp
Signature-Argon-RSA/results/energy/: argon_energy.jsonl  argon_energy_argon_raw.jsonl
Signature-Argon-RSA/src/: bench_local.cpp  bench_local.h  dsa.h  main.cpp
Signature-Argon-RSA/tools/energy/: run_batch.sh  run_ppk2_bench_argon.py
Signature-Argon/lib/pqc/: dsa.cpp  dsa.h  randombytes_particle.cpp
Signature-Argon/results/: analyze_results_argon.ipynb  argon_sign.jsonl  argon_verify.jsonl  argon_whole.jsonl
Signature-Argon/results/energy/: argon_energy.jsonl  argon_energy_argon_raw.jsonl
Signature-Argon/src/: bench_local.cpp  main.cpp
Signature-RaspberryPi/: CMakeLists.txt  DSA-Test.c  Readme.md  pingpong.c  queue.c  queue.h  run_dsa_server_loop.sh  transport.c  transport.h
Signature-RaspberryPi/results/: analyze_results.ipynb  analyze_results_raspberry.ipynb  rpi-local_keypair.jsonl  rpi-local_sign.jsonl  rpi-local_verify.jsonl  rpi_memory_time_summary.csv
Signature-RaspberryPi/results/energy/: rpi_energy.jsonl  rpi_energy_campaign.jsonl
Signature-RaspberryPi/results/local/keypair/: Falcon-padded-512.jsonl  ML-DSA-44.jsonl  SPHINCS_-SHAKE-128f-simple.jsonl
Signature-RaspberryPi/results/local/sign/: SPHINCS_-SHA2-128s-simple.jsonl  SPHINCS_-SHAKE-128s-simple.jsonl
Signature-RaspberryPi/results/local/verify/: MAYO-1.jsonl
Signature-RaspberryPi/results/local/whole/: MAYO-1.jsonl  ML-DSA-44.jsonl  SPHINCS_-SHAKE-128s-simple.jsonl
kamelisa/Argon/: serial-log.ps1
kamelisa/Argon/ML-KEM_Argon/: project.properties
kamelisa/Argon/ML-KEM_Argon-Bob/results/: README.md  mqtt_serial_log_20260405_132246.txt  radio_energy_analysis.tex  serial_log_20260405_121522.txt
kamelisa/Argon/ML-KEM_Argon-Bob/scripts/: capture_benchmark.py
kamelisa/Argon/ML-KEM_Argon-Bob/src/: MQTT_communication.cpp  benchmark_mqtt.cpp  benchmark_mqtt.h  main.cpp  queue.cpp
kamelisa/Argon/ML-KEM_Argon/.github/: signature-mqtt-instructions.md
kamelisa/Argon/ML-KEM_Argon/src/: MQTT_communication.cpp  (+6 more)
kamelisa/Argon/baseline-idle/: project.properties
kamelisa/ESP32/ESP32/: read_both.py  serial_out.txt
results/: analyze_results.ipynb  summary.csv
results/local/keypair/: MAYO-1.jsonl  SPHINCS_-SHA2-128s-simple.jsonl
results/local/sign/: ML-DSA-44.jsonl
results/local/whole/: SPHINCS_-SHAKE-128f-simple.jsonl
signature-esp32/: CMakeLists.txt  README.md
signature-esp32/components/DSA/: CMakeLists.txt
signature-esp32/components/DSA/common/: pqclean_randombytes_esp32.c  randombytes_mayo_esp32.c
signature-esp32/components/DSA/mayo/scripts/: find_irred_poly.sage
signature-esp32/main/: Kconfig.projbuild  app_interop.c  dsa.c  dsa.h  randombytes_esp32.c
signature-esp32/results/: analyze_results_esp32.ipynb  keypair.jsonl  sign.jsonl  verify_ML_DSA_44.jsonl  whole_ML_DSA_44.jsonl
signature-esp32/tools/energy/: run_batch.sh  run_ppk2_bench.py
(+25 files in other folders)
